Further Brittany standardization & characters

--- a/localisation/english/PB_country_specific/PB_Brittany_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Brittany_l_english.yml
@@ -10,8 +10,9 @@
   BRT_jean_boucher_leader_desc: "§YBorn:§! 20/11/1870\n\nJean Boucher has proven to be a competent leader in the eyes of the Breton people, his parties Laissez Faire economic policies have turned the Breton nation from a once struggling European backwater to a paradise of intellect, progress, and wealth. However, Boucher's presidency is at risk, many Frenchmen have crossed or are trying to cross the border in an attempt to distance themselves from the regime in France. Many of whom are Jewish which has caused elements in the Breton far right to raise voices of concern. Despite these critical individuals most of the Breton people have remained steadfast in their leading government’s decision to embrace any fleeing Frenchmen as their own, no matter their faith or race. Under Jean Boucher Brittany will seemingly continue its newly founded legacy as Europe's little haven with a big heart."
   BRT_olier_mordrel: "Olier Mordrel"
   BRT_regis_de_lestourbeillon: "Régis de Lestourbeillon"
-  BRT_jean_yves_keraudren: "Jean Yves Keraudren"
-  BRT_anatole_le_braz: "Anatole Le Braz"
+  BRT_gwilherm_kerverziou: "Gwilherm Kerverziou"
+  BRT_celestin_laine: "Célestin Lainé"
+  BRT_morvan_marchal: "Morvan Marchal"
   BRT_maurice_duhamel: "Maurice Duhamel"
   BRT_marcel_cachin: "Marcel Cachin"
  
