Filipino and Guerrero vps

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1024,6 +1024,7 @@
 #327 - MANILA
  VICTORY_POINTS_1221: "Batangas"
  VICTORY_POINTS_10265: "Manila"
+ VICTORY_POINTS_15541: "Malolos"
 #328 - JILIN
  VICTORY_POINTS_4572: "Changchun"
  VICTORY_POINTS_10433: "Harbin"
@@ -1528,6 +1529,8 @@
 #485 - GUERRERO
  VICTORY_POINTS_10730: "Acapulco"
  VICTORY_POINTS_14651: "Chilpancingo"
+ VICTORY_POINTS_14654: "Pinzón"
+ VICTORY_POINTS_14649: "Barra Vieja"
 #486 - META
  VICTORY_POINTS_1887: "Pore"
 #487 - SANTA CRUZ
@@ -1921,6 +1924,7 @@
 #623 - LUZON
  VICTORY_POINTS_12213: "Aparri"
  VICTORY_POINTS_1415: "San Carlos"
+ VICTORY_POINTS_4423: "Baguio"
 #624 - CENTRAL ISLANDS
  VICTORY_POINTS_4288: "Calapan"
  VICTORY_POINTS_4228: "Legaspi"
@@ -1931,9 +1935,9 @@
 #627 - MINDANAO
  VICTORY_POINTS_10243: "Cagayan"
  VICTORY_POINTS_4241: "Schlieffenshaven"
- VICTORY_POINTS_1421: "Zamboanga"
 #628 - CEBU
  VICTORY_POINTS_12118: "Cebu"
+ VICTORY_POINTS_1261: "Bacolod"
 #629 - SOUTH HAWAII
  VICTORY_POINTS_13459: "Honolulu"
  VICTORY_POINTS_10048: "Kailua-Kona"
@@ -3299,7 +3303,11 @@
  VICTORY_POINTS_4409: "Kendawangan"
  VICTORY_POINTS_15409: "Sukadana"
  VICTORY_POINTS_12280: "Sampit"
-
+ 
+ #1352 - Zamboanga
+ VICTORY_POINTS_10184: "Jolo"
+ VICTORY_POINTS_1421: "Zamboanga"
+ 
 #1353 - WESTERN PAPAU
  VICTORY_POINTS_12315: "Manokwari"
  VICTORY_POINTS_4468: "Sorong"
@@ -3379,8 +3387,14 @@
 #1405 - LIMBURG
  VICTORY_POINTS_9574: "Hasselt"
  VICTORY_POINTS_11562: "Maastricht"
+
+ #1414 - Maguindanao
+ VICTORY_POINTS_12158: "Dadiangas"
+ VICTORY_POINTS_4427: "Cotabato"
+ 
   #alt names
  FRA_VICTORY_POINTS_11562: "Meuseges"
+
 #1421 - DOGGERLAND
  VICTORY_POINTS_15791: "Nehellanwijk"
  VICTORY_POINTS_15790: "Port Hesus"
