New, Newer Walden, Phi Idea Standards, vietnamese blood
PBE 0% tariff on nevadan goods

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -6492,3 +6492,7 @@
   JKM_sikh_reforged: "Reforged Realm of Sikh"
   JKM_sikh_reforged_DEF: "the Reforged Realm of Sikh"
   JKM_sikh_reforged_ADJ: "Sikh"
+  
+  NEV_Mexican_Captaincy: "General Captaincy of New Mexico"
+  NEV_Mexican_Captaincy_DEF: "General Captaincy of New Mexico"
+  NEV_Mexican_Captaincy_ADJ: "Mexican"
