Occitania characters & French tweaks

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -360,18 +360,18 @@
   GER_ni_party:0 "NDV"
   GER_ni_party_long:0 "Nationaler Deutscher Volksbund"
 
-  FRA_jc_party:0 "PRU"
-  FRA_jc_party_long:0 "Parti Républicain Unifié"
-  FRA_ss_party:0 "PDP"
-  FRA_ss_party_long:0 "Parti du Peuple"
-  FRA_lb_party:0 "DEL"
-  FRA_lb_party_long:0 "Démocrates Libérauxn"
-  FRA_cn_party:0 "REP"
-  FRA_cn_party_long:0 "Républicains"
-  FRA_rc_party:0 "PRN"
-  FRA_rc_party_long:0 "Parti de la Rédemption Nationale"
-  FRA_an_party:0 "ANL"
-  FRA_an_party_long:0 "Alliance Nationale pour la Liberté"
+  FRA_jc_party:0 "Ligue des Justes"
+  FRA_jc_party_long:0 "Ligue des Justes"
+  FRA_ss_party:0 "Ligue Babouviste"
+  FRA_ss_party_long:0 "Ligue Babouviste"
+  FRA_lb_party:0 "PRR"
+  FRA_lb_party_long:0 "Parti Radical Réformiste"
+  FRA_cn_party:0 "Pdl'O - Tocquevilliste"
+  FRA_cn_party_long:0 "Party de l'Ordre - Tocquevilliste"
+  FRA_rc_party:0 "PSF"
+  FRA_rc_party_long:0 "Parti Social Français"
+  FRA_an_party:0 "Pdl'O - Orléaniste"
+  FRA_an_party_long:0 "Parti de l'Ordre - Orléaniste"
   FRA_ds_party:0 "FPF"
   FRA_ds_party_long:0 "Front Populaire Français"
   FRA_ni_party:0 "FPF"
