--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -307,7 +307,8 @@
  JC_VARIANT_13:0 "§ORevolutionary Mysticism§!"
  JC_VARIANT_13_desc:0 "\n\n£GFX_ideology_jacobin_banner_12\n\n\n\n§Y“The Revolution is of spiritual essence.”§!\n-§OAntonin Artaud§!\n\n§ORevolutionary Mysticism§! represents both a practice within existing revolutionary movements and an ideology by itself. While such phenomenon might appear as a contemporary byproduct of a broader regain of interest toward irrationalism and the occult, its first occurrences can be traced back to the Reformation Era. \n\nAmidst the multitude of radical movements and political initiatives flourishing throughout Europe at this time, some would embrace ritualistic practices — with highly codified ceremonies, an emphasis put on secrecy and various considerations about faith, the human soul and metaphysics. Rooted either in Kabbalism, esoteric Christianity or theistic beliefs, these fellowships would eventually fall dormants as revolutionary enthusiasm vanished off. \n\nWhat could have been considered as an ephemeral and ultimately futile oddity eventually resurfaced in the late-nineteenth century. As capitalism sweeped mercilessly the old faiths to impose its mercantile rationality, a new dissenting esotericism arose to oppose both the old Order of the autocrats and the new techno-industrial hegemony. Diving into Eastern philosophy while drawing from romanticism and decadentism, Revolutionary Mysticism would slowly grow in importance over the course of the twentieth century — gaining enormous appeal as the Great War brought about mass delusion toward the sciences which allowed such bloodshed to occur. \n\nAs diverse as the hundreds of sects acting in its name, Revolutionary Mysticism  nonetheless holds true the tenet of the revolution not being a purely materialistic affair. Only through spiritual and collective renewal shall the individual reach the Nirvana of its emancipation."
  
-
+ JC_VARIANT_14:0 "§ORevolutionary Fatimism§!" 
+ JC_VARIANT_14_desc:0 "\n\n£GFX_ideology_jacobin_banner_14\n\n\n\n§Y“Theology is not only thinking about God, it is thinking about the world in light of God.”§!\n-§OGustavo Gutiérrez§!\n\n§ORevolutionary Fatimism§!"
 
   ENG_jc_party:0 "WUP- Radicals"
   ENG_jc_party_long:0 "Radical Faction of the Worker's Union Party"
@@ -1242,11 +1243,15 @@
 
   DAS_ni_party:0 "Fernost Kommandos"  
   DAS_ds_party:0 "Dönitz Administration"
-  DAS_rc_party:0 "DV Influence"
-  DAS_an_party:0 "Freier Unternehmer Bund"
-  DAS_cn_party:0 "Bredow Faction"
+  DAS_rc_party:0 "KPV-MZKAG"
+  DAS_rc_party_long:0 "Kaiserlich-Privilegierte Vereinigte Messing-, Zuckerraffinerie- und Kolonialbergbauwerke AG"
+  DAS_an_party:0 "Zitronella Werke AG"
+  DAS_an_party_long:0 "Zitronella United Sugar Refineries, Mining and Commercial Works Joint-Stock Company"
+  DAS_cn_party:0 "Overbeck & Dent AG"
+  DAS_cn_party_long:0 "Dent & Overbeck’sche Nordborneo-Kompagnie AG"
   DAS_lb_party:0 "UDP Influence"
-  DAS_ss_party:0 "SB Influence"
+  DAS_ss_party:0 "PCSJ"
+  DAS_ss_party_long:0 "Papua Commission for Social Justice"
   DAS_jc_party:0 "Seperatists"
 
   NRT_ds_party:0 "Norton Dynasty"
