--- a/localisation/english/PB_units_l_english.yml
+++ b/localisation/english/PB_units_l_english.yml
@@ -1,38 +1,38 @@
 ﻿l_english:
 
   ## CATEGORIES ##
- category_helicopter:0 "Helicopters"
- category_automat:0 "Automats"
- category_suppression:0 "Suppression Units"
- category_amalgamate:0 "Amalgamates"
-
+ category_helicopter: "Helicopters"
+ category_automat: "Automats"
+ category_suppression: "Suppression Units"
+ category_amalgamate: "Amalgamates"
+   
   ## INFANTRY ##
 
-  light_infantry:0 "Light Infantry"
- light_infantry_desc:0 "They are not perfect but they are enough."
- militia:0 "Militia"
- militia_desc:0 "The most efficient road block."
- elite_infantry:0 "Elite Infantry"
- elite_infantry_desc:0 "Not their first battle."
- gunslingers:0 "Gunslingers"
- gunslingers_desc:0 "Specialized Western Forces, Yee and Haw included"
+ light_infantry: "Light Infantry"
+ light_infantry_desc: "They are not perfect but they are enough."
+ militia: "Militia"
+ militia_desc: "The most efficient road block."
+ elite_infantry: "Elite Infantry"
+ elite_infantry_desc: "Not their first battle."
+ gunslingers: "Gunslingers"
+ gunslingers_desc: "Specialized Western Forces, Yee and Haw included"
 
  semi_motorized_cavalry: "Semi-Motorized Cavalry"
  semi_motorized_cavalry_desc: "Unit that consists of both horseback infantry as well as trucks. Something in between the two."
 
   ## AUGMENTED UNITS ##
 
- group_augmented_bioeng_title:0 "Augmented & Bioeng. Battalions"
- combat_amalgamate:0 "Combat Amalgamates"
- combat_amalgamate_desc:0 "Questionably ethical cavalry replacement"
- primordiform:0 "Primordiform Amalgamate"
- primordiform_desc:0 "Questionably ethical combat cavalry"
- hardsuits:0 "Hardsuits"
- hardsuits_desc:0 "Heavily Armored Augmented Infantry"
- razormaidens:0 "Razormaidens"
- razormaidens_desc:0 "Augmented Recon and Close Combat"
- clone_troopers:0 "Decanter Battalion"
- clone_troopers_desc:0 "Lobotomized Combat Teams, Disposable"
+ group_augmented_bioeng_title: "Augmented & Bioeng. Battalions"
+ combat_amalgamate: "Combat Amalgamates"
+ combat_amalgamate_desc: "Questionably ethical cavalry replacement"
+ primordiform: "Primordiform Amalgamate"
+ primordiform_desc: "Questionably ethical combat cavalry"
+ hardsuits: "Hardsuits"
+ hardsuits_desc: "Heavily Armored Augmented Infantry"
+ razormaidens: "Razormaidens"
+ razormaidens_desc: "Augmented Recon and Close Combat"
+ clone_troopers: "Decanter Battalion"
+ clone_troopers_desc: "Lobotomized Combat Teams, Disposable"
 
   ## ARTILLERY ##
  anti_tank_brigade:1 "Anti-Landship"
@@ -40,13 +40,57 @@
 
   ## AUTOMATS ##
 
- group_automat_title:0 "Automat Battalions"
- duopod_automat:0 "Duopod Automats"
- duopod_automat_desc:0 "Light Model Automatic Mech"
- tripod_automat:0 "Tripod Automats"
- tripod_automat_desc:0 "Medium Automatic Mech"
- quadrupod_automat:0 "Quadrupod Automats"
- quadrupod_automat_desc:0 "Heavy Automatic Mech"
+ group_automat_title: "Automat Battalions"
+ group_automat_combat_support_title: "Automat Combat Support Battalions"
+ duopod_automat: "Duopod Automats"
+ duopod_automat_desc: "Light Model Automatic Mech"
+ tripod_automat: "Tripod Automats"
+ tripod_automat_desc: "Medium Automatic Mech"
+ quadrupod_automat: "Quadrupod Automats"
+ quadrupod_automat_desc: "Heavy Automatic Mech"
+
+ aquapod_automat: "Aquapod Automat Battalion"
+ aquapod_automat_desc: " "
+
+ megapod_automat: "Megapod Automat"
+ megapod_automat_desc: " "
+
+ duopod_sp_artillery_brigade: "Duopod SP Artillery"
+ duopod_sp_artillery_brigade_desc: " "
+ tripod_sp_artillery_brigade: "Tripod SP Artillery"
+ tripod_sp_artillery_brigade_desc: " "
+ quadrupod_sp_artillery_brigade: "Quadrupod SP Artillery"
+ quadrupod_sp_artillery_brigade_desc: " "
+
+ duopod_automat_destroyer_brigade: "Duopod Destroyer"
+ duopod_automat_destroyer_brigade_desc: " "
+ tripod_automat_destroyer_brigade: "Tripod Destroyer"
+ tripod_automat_destroyer_brigade_desc: " "
+ quadrupod_automat_destroyer_brigade: "Quadrupod Destroyer"
+ quadrupod_automat_destroyer_brigade_desc: " "
+
+ duopod_sp_anti_air_brigade: "Duopod SP Anti-Air"
+ duopod_sp_anti_air_brigade_desc: " "
+ tripod_sp_anti_air_brigade: "Tripod SP Anti-Air"
+ tripod_sp_anti_air_brigade_desc: " "
+ quadrupod_sp_anti_air_brigade: "Quadrupod SP Anti-Air"
+ quadrupod_sp_anti_air_brigade_desc: " "
+
+ amphibious_duopod_automat: "Duopod Amphibious Battalion"
+ amphibious_duopod_automat_desc: " "
+ amphibious_tripod_automat: "Tripod Amphibious Battalion"
+ amphibious_tripod_automat_desc: " "
+ amphibious_quadrupod_automat: "Quadrupod Amphibious Battalion"
+ amphibious_quadrupod_automat_desc: " "
+
+ duopod_flame_automat: "Duopod Flame Company"
+ duopod_flame_automat_desc: " "
+ tripod_flame_automat: "Tripod Flame Company"
+ tripod_flame_automat_desc: " "
+ quadrupod_flame_automat: "Quadrupod Flame Company"
+ quadrupod_flame_automat_desc: " "
+
+
 
   ## ARMORED ##
     # ARMOR #
@@ -70,33 +114,33 @@
  modern_tank_destroyer_brigade:1 "Modern Landship Destroyer"
  modern_tank_destroyer_brigade_desc:1 "A Modern Landship chassis fitted with a much larger gun instead of a turret."
     # FLAME #
- light_flame_tank:0 "Light Flame Landship Company"
- light_flame_tank_desc:0 "A company of light, flamethrower-equipped vehicles to provide support in assaulting cities and fortifications."
- medium_flame_tank:0 "Medium Flame Landship Company"
- medium_flame_tank_desc:0 "A company of mid-sized, flamethrower-equipped vehicles to provide support in assaulting cities and fortifications."
- heavy_flame_tank:0 "Heavy Flame Landship Company"
- heavy_flame_tank_desc:0 "A company of heavy, flamethrower-equipped vehicles to provide support in assaulting cities and fortifications."
+ light_flame_tank: "Light Flame Landship Company"
+ light_flame_tank_desc: "A company of light, flamethrower-equipped vehicles to provide support in assaulting cities and fortifications."
+ medium_flame_tank: "Medium Flame Landship Company"
+ medium_flame_tank_desc: "A company of mid-sized, flamethrower-equipped vehicles to provide support in assaulting cities and fortifications."
+ heavy_flame_tank: "Heavy Flame Landship Company"
+ heavy_flame_tank_desc: "A company of heavy, flamethrower-equipped vehicles to provide support in assaulting cities and fortifications."
 
   ## SUPPORT ##
  anti_tank:1 "Support Anti-Landship"
- panzerhounds:0 "Panzerhounds"
- panzerhounds_desc:0 "The dogs of war, literally"
- flamethrowers:0 "Flamethrower Teams"
- flamethrowers_desc:0 "For when you want to set those people over there on fire, but you're just not close enough to get the job done."
- shockjockeys:0 "Shockjockeys"
- shockjockeys_desc:0 "Shock Troopers, intended for anti-armor use"
- black_hundred:0 "Black Hundredists"
- motorized_black_hundred:0 "Motorized Black Hundredists"
- battle_priest:0 "Battle Priests"
- battle_priest_desc:0 "For when you need to wage war, but you don't want God to wag his finger about you killing that other tribe."
- attack_helicopter_brigade:0 "Attack Helicopter Brigade"
- attack_helicopter_brigade_desc:0 "Helicopter support brigade, focused on supporting ground units by attacking targets from air."
+ panzerhounds: "Panzerhounds"
+ panzerhounds_desc: "The dogs of war, literally"
+ flamethrowers: "Flamethrower Teams"
+ flamethrowers_desc: "For when you want to set those people over there on fire, but you're just not close enough to get the job done."
+ shockjockeys: "Shockjockeys"
+ shockjockeys_desc: "Shock Troopers, intended for anti-armor use"
+ black_hundred: "Black Hundredists"
+ motorized_black_hundred: "Motorized Black Hundredists"
+ battle_priest: "Battle Priests"
+ battle_priest_desc: "For when you need to wage war, but you don't want God to wag his finger about you killing that other tribe."
+ attack_helicopter_brigade: "Attack Helicopter Brigade"
+ attack_helicopter_brigade_desc: "Helicopter support brigade, focused on supporting ground units by attacking targets from air."
 
 
 ### MISC ###
 # FILTERS #
- AIR_OVERVIEW_CATEGORY_9:0 "We have $COUNT|H$ §HHelicopters§! in our airforces:"
- AIR_OVERVIEW_CATEGORY_REGULAR_9:0 "$COUNT|H$ are §HHelicopters§!"
- AIR_OVERVIEW_CATEGORY_CARRIER_9:0 "$COUNT|H$ are §HCarrier Helicopters§!"
- TARGET_HAS_CATEGORY_9:0 "$COUNTRY|H$ has $COUNT|H$ §HHelicopters§!."
+ AIR_OVERVIEW_CATEGORY_9: "We have $COUNT|H$ §HHelicopters§! in our airforces:"
+ AIR_OVERVIEW_CATEGORY_REGULAR_9: "$COUNT|H$ are §HHelicopters§!"
+ AIR_OVERVIEW_CATEGORY_CARRIER_9: "$COUNT|H$ are §HCarrier Helicopters§!"
+ TARGET_HAS_CATEGORY_9: "$COUNTRY|H$ has $COUNT|H$ §HHelicopters§!."
 
