--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -347,40 +347,70 @@
   gw_automat:0 "Great War Automat"
   gw_automat_chassis:0 "Great War Automat Chassis"
   basic_duopod:0 "Duopod I"
+  improved_duopod:0 "Duopod II"
+  advanced_duopod:0 "Duopod III"
+
+ 
+  basic_tripod:0 "Tripod I"
+  improved_tripod:0 "Tripod II"
+  advanced_tripod:0 "Tripod III"
+
+ 
+  basic_quadrupod:0 "Quadrupod I"
+  improved_quadrupod:0 "Quadrupod II"
+  advanced_quadrupod:0 "Quadrupod III"
+
+  # AUTOMAT UPGRADES #
   basic_duopod_upgrade_1:0 "Reconstituted Gearbox"
   basic_duopod_upgrade_1_desc:0 ""
   basic_duopod_upgrade_2:0 "Onboard Fire Suppressors"
   basic_duopod_upgrade_2_desc:0 "The light armor of the Duopod is unfortunately prone to bursting into flames if hit in the  wrong spot. To remedy this, the crew has been fitted with the equipment to surpress a sudden fire.\n\n"
-  improved_duopod:0 "Duopod II"
+  basic_duopod_upgrade_1_nsb:0 "$basic_duopod_upgrade_1$"
+  basic_duopod_upgrade_1_nsb_desc:0 "$basic_duopod_upgrade_1_desc$"
+  basic_duopod_upgrade_2_nsb:0 "$basic_duopod_upgrade_2$"
+  basic_duopod_upgrade_2_nsb_desc:0 "$basic_duopod_upgrade_2_desc$"
   improved_duopod_upgrade_1:0 "Improved Targeting Optics"
   improved_duopod_upgrade_1_desc:0 "With the continued progress of military optics, our Duopods are best not left behind.  Utilizing radium-painted crosshairs, the light Duopod is more able to spot enemies, even during a dark afternoon.\n\n"
   improved_duopod_upgrade_2:0 "Engine Overclocking Protocols"
   improved_duopod_upgrade_2_desc:0 "With the experience of war teaching us more and more about properly handling our equipment in  the field, protocols can be designed for the light Duopod and its engine in special breakthrough cases, allowing the crew to fully  utilize a military advantage. \n\n"
-  advanced_duopod:0 "Duopod III"
- 
-  basic_tripod:0 "Tripod I"
-  improved_tripod:0 "Tripod II"
+  improved_duopod_upgrade_1_nsb:0 "$improved_duopod_upgrade_1$"
+  improved_duopod_upgrade_1_nsb_desc:0 "$improved_duopod_upgrade_1_desc$"
+  improved_duopod_upgrade_2_nsb:0 "$improved_duopod_upgrade_2$"
+  improved_duopod_upgrade_2_nsb_desc:0 "$improved_duopod_upgrade_2_desc$"
+
   basic_tripod_upgrade_1:0 "Dominance Horn"
   basic_tripod_upgrade_1_desc:0 "A combination of the newest research in the fields of psychology and engineering, a  \"dominance horn\" is a tool to demoralise the enemy through sheer terror. Blasting the airhorn on the Tripod is thus important to  assert dominance.\n\n"
   basic_tripod_upgrade_2:0 "Heat-Ray Prismatic Accelerators"
   basic_tripod_upgrade_2_desc:0 "Utilizing the newest insight on prism-conductive warfare, the heat-ray accelerators allow  for a truly phenomenal weapon. By concentrating light through a prism and feeding it enough energy through a complex array of tesla  coils, a beam of light capable of damaging planes is created. \n\n"
-  advanced_tripod:0 "Tripod III"
+  basic_tripod_upgrade_1_nsb:0 "$basic_tripod_upgrade_1$"
+  basic_tripod_upgrade_1_nsb_desc:0 "$basic_tripod_upgrade_1_desc$"
+  basic_tripod_upgrade_2_nsb:0 "$basic_tripod_upgrade_2$"
+  basic_tripod_upgrade_2_nsb_desc:0 "$basic_tripod_upgrade_2_desc$"
   improved_tripod_upgrade_1:0 "Integrated Radium Optics"
   improved_tripod_upgrade_1_desc:0 "The Tripods rely in their optics to remain stable and crawl through the fields at their  impressive speeds. The newest insights on radium-painted optics allows the crew of the Tripod to keep their Tripod stable, even in a  darker context. As far as we are aware, long-term effects aren't detrimental. \n\n"
   improved_tripod_upgrade_2:0 "Expanded Ration Storage Pods"
   improved_tripod_upgrade_2_desc:0 "With a weapon designed to breakthrough lines like the Tripod, many crews often find themself  far away from our supply lines. With some reports of Tripod crews snacking on their messaging pidgeons, a new design has been drawn  up that allows for more rations to be stored on the tripod. \n\n"
- 
-  basic_quadrupod:0 "Quadrupod I"
+  improved_tripod_upgrade_1_nsb:0 "$improved_tripod_upgrade_1$"
+  improved_tripod_upgrade_1_nsb_desc:0 "$improved_tripod_upgrade_1_desc$"
+  improved_tripod_upgrade_2_nsb:0 "$improved_tripod_upgrade_2$"
+  improved_tripod_upgrade_2_nsb_desc:0 "$improved_tripod_upgrade_2_desc$"
+
   basic_quadrupod_upgrade_1:0 "Repair Kit Standardization"
   basic_quadrupod_upgrade_1_desc:0 "The Quadrupods are perhaps the most complicated weapon a modern army can wield in the field,  which shines through in the almost impossible task of assembling a standard repair kit for an ordinary crew. However, we've finally  been able to make one. Let's hope our boys in the field don't have issues with the 366 pages of the manual (which excludes the 201  pages of the special engine manual). \n\n"
   basic_quadrupod_upgrade_2:0 "Onboard Coffee and Tea Maker"
   basic_quadrupod_upgrade_2_desc:0 "Despite the horrid creations of man tested on the battlefield, mutilating the youngest  generations both physically and mentally, we shouldn't sink below a certain standard. The Quadrupod crews work hard and thus deserve  an occasional break from trampling the enemy soldier. To allow such a break, a field-specialized coffee and tea maker has been  produced. \n\n"
-  improved_quadrupod:0 "Quadrupod II"
+  basic_quadrupod_upgrade_1_nsb:0 "$basic_quadrupod_upgrade_1$"
+  basic_quadrupod_upgrade_1_nsb_desc:0 "$basic_quadrupod_upgrade_1_desc$"
+  basic_quadrupod_upgrade_2_nsb:0 "$basic_quadrupod_upgrade_2$"
+  basic_quadrupod_upgrade_2_nsb_desc:0 "$basic_quadrupod_upgrade_2_desc$"
   improved_quadrupod_upgrade_1:0 "Telescreen Relay Targeting"
   improved_quadrupod_upgrade_1_desc:0 "While an extremely young technology, the Telescreen, or \"Screenie\" as called by our  soldiers, is a promising way of designing optics for our automats. With such an invention, our soldiers can perhaps properly locate  the enemy from inside their land-born battleship. \n\n"
   improved_quadrupod_upgrade_2:0 "Low Intensity Heat Ray Emitter"
   improved_quadrupod_upgrade_2_desc:0 "While the use of prism-induced weaponry has grown somewhat popular, the Quadrupods still lack  any design utilizing the energy-costly tool, due to the already high energy cost of fielding a single Quadrupod. Scientists have  thus drawn up a low intensity version of the weapon, able to be used on flesh with relative success. \n\n"
-  advanced_quadrupod:0 "Quadrupod III"
+  improved_quadrupod_upgrade_1_nsb:0 "$improved_quadrupod_upgrade_1$"
+  improved_quadrupod_upgrade_1_nsb_desc:0 "$improved_quadrupod_upgrade_1_desc$"
+  improved_quadrupod_upgrade_2_nsb:0 "$improved_quadrupod_upgrade_2$"
+  improved_quadrupod_upgrade_2_nsb_desc:0 "$improved_quadrupod_upgrade_2_desc$"
  
    # HIDDEN #
   jungle_automat_tech: "Jungle Specialized Automats"
