--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -6496,3 +6496,11 @@
   NEV_Mexican_Captaincy: "General Captaincy of New Mexico"
   NEV_Mexican_Captaincy_DEF: "General Captaincy of New Mexico"
   NEV_Mexican_Captaincy_ADJ: "Mexican"
+  
+  SSL_Overbeck: "Rajahnate of Sulu"
+  SSL_Overbeck_DEF: "The Rajahnate of Sabah, Gaya and Sandakan"
+  SSL_Overbeck_ADJ: "Suluan"
+  
+  SSL_Independent: "Sultunate of Sulu"
+  SSL_Independent_DEF: "The Sultunate of Sulu"
+  SSL_Independent_ADJ: "Tausūg"
