--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8989,6 +8989,10 @@
     SNM:0 "Republic of San Marino"
     SNM_DEF:0 "the Republic of San Marino"
     SNM_ADJ:0 "Sanmarinese"
+    
+    SSL:0 "Sultunate of Sulu"
+    SSL_DEF:0 "The Sultunate of Sulu"
+    SSL_ADJ:0 "Tausūg"
 
     ###################################
     # TEMPLATE
