Sultunate of Sulu and Philippines p6

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -6504,3 +6504,7 @@
   SSL_Independent: "Sultunate of Sulu"
   SSL_Independent_DEF: "The Sultunate of Sulu"
   SSL_Independent_ADJ: "Tausūg"
+  
+  PHI_German: "Viceroyalty of the Philippines"
+  PHI_German_DEF: "Viceroyalty of the Philippines"
+  PHI_German_ADJ: "Filipino"
