--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -227,22 +227,22 @@
     BOL_cn_ADJ:0 "Charquino"
     BOL_an_ADJ:0 "Charquino"
 
-    POR_ni:0 "Divine Divine Kingdom of Portugal"
-    POR_ni_DEF:0 "The Divine Divine Kingdom of Portugal"
-    POR_ds:0 "Divine Kingdom of Portugal"
-    POR_ds_DEF:0 "The Divine Kingdom of Portugal"
-    POR_rc:0 "Divine Kingdom of Portugal"
-    POR_rc_DEF:0 "The Divine Kingdom of Portugal"
-    POR_an:0 "Divine Kingdom of Portugal"
-    POR_an_DEF:0 "The Divine Kingdom of Portugal"
-    POR_cn:0 "Divine Kingdom of Portugal"
-    POR_cn_DEF:0 "The Divine Kingdom of Portugal"
-    POR_lb:0 "Divine Kingdom of Portugal"
-    POR_lb_DEF:0 "The Divine Kingdom of Portugal"
-    POR_ss:0 "Divine Kingdom of Portugal"
-    POR_ss_DEF:0 "The Divine Kingdom of Portugal"
-    POR_jc:0 "Divine Kingdom of Portugal"
-    POR_jc_DEF:0 "The Divine Kingdom of Portugal"
+    POR_ni:0 "Immaculate Kingdom of Portugal"
+    POR_ni_DEF:0 "The Immaculate Kingdom of Portugal, Galicia and the Algarves"
+    POR_ds:0 "Immaculate Kingdom of Portugal"
+    POR_ds_DEF:0 "The Immaculate Kingdom of Portugal, Galicia and the Algarves"
+    POR_rc:0 "Immaculate Kingdom of Portugal"
+    POR_rc_DEF:0 "The Immaculate Kingdom of Portugal, Galicia and the Algarves"
+    POR_an:0 "Immaculate Kingdom of Portugal"
+    POR_an_DEF:0 "The Immaculate Kingdom of Portugal, Galicia and the Algarves"
+    POR_cn:0 "Immaculate Kingdom of Portugal"
+    POR_cn_DEF:0 "The Immaculate Kingdom of Portugal, Galicia and the Algarves"
+    POR_lb:0 "Immaculate Kingdom of Portugal"
+    POR_lb_DEF:0 "The Immaculate Kingdom of Portugal, Galicia and the Algarves"
+    POR_ss:0 "Immaculate Kingdom of Portugal"
+    POR_ss_DEF:0 "The Immaculate Kingdom of Portugal, Galicia and the Algarves"
+    POR_jc:0 "Immaculate Kingdom of Portugal"
+    POR_jc_DEF:0 "The Immaculate Kingdom of Portugal, Galicia and the Algarves"
     POR_ni_ADJ:0 "Portuguese"
     POR_rc_ADJ:0 "Portuguese"
     POR_lb_ADJ:0 "Portuguese"
