Culture Wars p1 and Vasconnization

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -674,22 +674,38 @@ PB_culture_233: "New Hollander"
 PB_culture_234: "Kiwi"
 PB_culture_235: "Australisch"
 
-# ASIA #
+# EAST ASIAN #
 PB_culture_236: "Japanese"
 PB_culture_237: "Ainu"
 PB_culture_238: "Korean"
-PB_culture_239: "Formosan"
-PB_culture_240: "Filipino"
 PB_culture_241: "Thai"
 PB_culture_242: "Vietnamese"
 PB_culture_243: "Khmer"
 PB_culture_244: "Lao"
+PB_culture_250: "Euro-Asiatic"
+PB_culture_308: "Arakan"
+PB_culture_309: "Shan"
+PB_culture_310: "Karen"
+PB_culture_311: "Tai Yuan"
+PB_culture_312: "Kachin"
+PB_culture_313: "Mei Tei"
+PB_culture_314: "Degar"
+
+# MALAYAN #
+PB_culture_240: "Tagalog"
 PB_culture_245: "Malay"
 PB_culture_246: "Indonesian"
 PB_culture_247: "Papuan"
+PB_culture_239: "Formosan"
+PB_culture_303: "Moro"
+PB_culture_304: "Ilocano"
+PB_culture_305: "Waray-Waray"
+PB_culture_306: "Cebuano"
+PB_culture_307: "Cuyunon"
+
+# PACIFIC #
 PB_culture_248: "Hawaiian"
 PB_culture_249: "Micronesian"
-PB_culture_250: "Euro-Asiatic"
 
 # CHINA #
 PB_culture_251: "Manchu"
