--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -580,10 +580,10 @@
  VICTORY_POINTS_11692: "Lugo"
  VICTORY_POINTS_6734: "Vigo"
 #172 - NAVARRE
- VICTORY_POINTS_740: "Bilbao"
- VICTORY_POINTS_3933: "Pamplona"
- VICTORY_POINTS_3737: "San Sebastián"
- VICTORY_POINTS_3735: "Vitoria"
+ VICTORY_POINTS_740: "Bilbo"
+ VICTORY_POINTS_3933: "Iruñea"
+ VICTORY_POINTS_3737: "Donostia"
+ VICTORY_POINTS_3735: "Vitoria-Gasteiz"
 #173 - GRANADA
  VICTORY_POINTS_12038: "Almería"
  VICTORY_POINTS_10009: "Antequera"
@@ -2439,6 +2439,7 @@
  VICTORY_POINTS_1185: "Nam Dinh"
  VICTORY_POINTS_7015: "Thai Nguyen"
 #841 - APURDI
+ VICTORY_POINTS_743: "Bayonne"
 #842 - LA RIOJA
  VICTORY_POINTS_3902: "Logroño"
 #843 - BALASORE
@@ -3423,7 +3424,7 @@
  VICTORY_POINTS_321:0 "Rostock"
  VICTORY_POINTS_514:0 "Dresden"
  VICTORY_POINTS_587:0 "Köln"
- FRA_VICTORY_POINTS_587:0 "Eau de Cologne"
+ FRA_VICTORY_POINTS_587:0 "Cologne"
  VICTORY_POINTS_3488:0 "Aachen"
  FRA_VICTORY_POINTS_3488:0 "Aix-la-Chapelle"
  VICTORY_POINTS_3522:0 "Magdeburg"
@@ -3448,6 +3449,7 @@
  VICTORY_POINTS_11399:0 "Lublin"
  VICTORY_POINTS_6332:0 "Königsberg"
  VICTORY_POINTS_6377:0 "Hannover"
+ GER_VICTORY_POINTS_9503:0 "Straßburg"
 
  VICTORY_POINTS_6488:0 "Frankfurt"
  VICTORY_POINTS_9517:0 "Stuttgart"
