Mannerheim Portrait + minor stuff

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -145,7 +145,7 @@
  STATE_143: "Trondelag"
  STATE_144: "Finnmark"
  STATE_145: "Åland"
- STATE_146: "Kareliya"
+ STATE_146: "Karelen"
  STATE_147: "Bay Islands"
  STATE_148: "Lappi"
  STATE_149: "Österbotten"
