--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -492,7 +492,7 @@
 #146 - KARELIYA
  VICTORY_POINTS_6082: "Lappstrand"
  VICTORY_POINTS_3187: "Sordavala"
- VICTORY_POINTS_9206: "Vyborg"
+ VICTORY_POINTS_9206: "Viborg"
 #147 - BAY ISLANDS
 #148 - LAPPI
  VICTORY_POINTS_6045: "Kuusamo"
