French characters & tweaks

--- a/localisation/english/PB_country_specific/PB_France_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_France_l_english.yml
@@ -39,7 +39,6 @@
   FRA_xavier_vallat_leader_desc: "§HBorn:§! §Y23/12/1891 in Villedieu, Vaucluse Department, French Empire§!\n\nOnce a devout catholic and a loyal monarchist, Vallat hasn't called himself those things in years. Mutilated by the Great War, Vallat was there to bear witness to things no man should have ever seen. An especially gruelling memory of a friend devoured by livewire during a German trench run remains haunting to the old veteran, to the point that few conversations on the war don't end with Vallat reflecting on his helplessness back then. With the horrors of war turning Vallat away from Christianity and the monarchy, he quickly became a member of the National Front and the SP militia. Rubbing shoulders with Doriot while keeping Darnand at a comfortable distance, Vallat was able to become secretary of the militia, responsible for the more administrative side of murder and disappearances, keeping the SP out of the mock judiciary of the old dictatorship.\n\nNow, Vallat has found himself standing before the golden throne of France. With little to stand for without the old party beyond his rabid antisemitism, Vallat has turned himself into the man keeping the SP together, keeping it from total anarchy and pointless violence. Instead, Vallat functions as Frances Machiavelli, forming an economy of violence by abusing the connections in the militia and the government, keeping them on a short and tight leash. For now, the SP will function as Vallats tool for national stabilisation, yet it remains to be seen if he can keep this situation running.\n\nHow long until violence implodes in on itself?"
   FRA_gabrielle_chanel: "Gabrielle 'Coco' Chanel"
   FRA_gabrielle_chanel_leader_desc: "§HBorn:§! §Y19/8/1883 in Saumur, Anjou Department, French Empire§!"
-  FRA_alphonse_de_chateaubriant: "Alphonse de Châteaubriant"
   
   FRA_francois_rocque: "François de La Rocque"
   FRA_charles_de_gaulle: "Charles de Gaulle"
@@ -95,6 +94,8 @@
   FRA_hubert_lagardelle: "Hubert Lagardelle"
   FRA_edgar_puaud: "Edgar Puaud"
   FRA_paul_touvier: "Paul Touvier"
+  FRA_philippe_petain: "Philippe Pétain"
+  FRA_savitri_devi: "Maximine Portaz"
   # ECONOMY MINISTER
   FRA_andre_grisoni: "André Grisoni"
   FRA_leon_daudet: "Léon Daudet" 
@@ -104,12 +105,13 @@
   FRA_robert_brasillach: "Robert Brasillach"
   FRA_maurice_papon: "Maurice Papon"
   FRA_rene_bousquet: "René Bousquet"
-  FRA_celestin_laine: "Célestin Lainé"
   FRA_jacques_correze: "Jacques Corrèze"
+  FRA_eugene_deloncle: "Eugène Deloncle"
   # INTERIOR MINISTER
   FRA_pierre_pucheu: "Pierre Pucheu"
   FRA_georges_valois: "Georges Valois"
   FRA_jean_fontenoy: "Jean Fontenoy"
+  FRA_alphonse_de_chateaubriant: "Alphonse de Châteaubriant"
   ### SCIENTISTS ###
   # LAND
   FRA_andre_citroen: "André-Gustave Citroën"
