India VPs Part 1

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -1668,6 +1668,23 @@
   SIA_ds_party_long:0 "Siam Royal Party"
   SIA_ni_party:0 "Khana Ratsadon"
   SIA_ni_party_long:0 "Khana Ratsadon"
+  
+  FOM_jc_party:0 "Anushilan Samiti"
+  FOM_jc_party_long:0 "Practice Association"
+  FOM_ss_party:0 "HSSS" 
+  FOM_ss_party_long:0 "Hindu Society Reform League"
+  FOM_lb_party:0 "INA - Exiles"
+  FOM_lb_party_long:0 "India National Association Exiles"
+  FOM_cn_party:0 ""
+  FOM_cn_party_long:0 "" 
+  FOM_an_party:0 "Smuggler Groups" 
+  FOM_an_party_long:0 "Indian Underground Smugglers" 
+  FOM_rc_party:0 "Righteous Union Militias"
+  FOM_rc_party_long:0 "Righteous Union Militias"  
+  FOM_ds_party:0 "RJA Expedition" 
+  FOM_ds_party_long:0 "Revolutionary Japanese Army Expeditionary Corps" 
+  FOM_ni_party:0 "" 
+  FOM_ni_party_long:0 ""
 
  ############
  # POLITICAL PARTY TEMPLATE 
