--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1372,6 +1372,9 @@
  VICTORY_POINTS_8087: "Hyderabad"
 #428 - GUJARAT
  VICTORY_POINTS_9975: "Amedabade"
+ VICTORY_POINTS_11952: "Vadodara"
+ VICTORY_POINTS_7165: "Godhra"
+ VICTORY_POINTS_14890: "Mehsana"
 #429 - DECCAN
 #430 - EAST BENGAL
  VICTORY_POINTS_12010: "Chittagong"
@@ -1386,6 +1389,7 @@
 #435 - BIHAR
 #436 - JABALPUR
 #437 - BHOPAL
+ VICTORY_POINTS_11995: "Bhopal"
 #438 - AWADH
  VICTORY_POINTS_12137: "Lucknow"
  VICTORY_POINTS_2086: "Delhi"
@@ -2447,6 +2451,8 @@
 #844 - BOM BAHIA
  VICTORY_POINTS_1349: "Bombaim"
 #845 - DIU
+ VICTORY_POINTS_1190: "Bhuj"
+#845 - DIU
 #846 - GOA
 #847 - KARNATAKA
 #848 - MADRAS
@@ -3019,6 +3025,9 @@
 #1103 - AGRA
 #1104 - MEWAR
 #1105 - INDORE
+ VICTORY_POINTS_12080: "Indore"
+ VICTORY_POINTS_1199: "Mandsaur"
+ VICTORY_POINTS_14006: "Ratlam"
 #1106 - BUNDELKHAND
 #1107 - JHARKHAND
  VICTORY_POINTS_4516: "Patna"
@@ -3228,6 +3237,11 @@
  VICTORY_POINTS_5000: "Barinas"
 #1254 - RIO BLANCO
  VICTORY_POINTS_13461: "Porth Gwynfyd"
+ 
+#1262 - GONWANDA
+ VICTORY_POINTS_8120: "Jabalpur"
+ VICTORY_POINTS_10801: "Damoh"
+  
 #1290 - Aden
  VICTORY_POINTS_15002: "Aden"
 
@@ -3388,7 +3402,12 @@
 #1405 - LIMBURG
  VICTORY_POINTS_9574: "Hasselt"
  VICTORY_POINTS_11562: "Maastricht"
-
+ 
+ #1413 - Maguindanao
+ VICTORY_POINTS_4132: "Neva Bandar"
+ VICTORY_POINTS_10118: "Rajkot"
+ VICTORY_POINTS_7207: "Bhavnagar"
+  
  #1414 - Maguindanao
  VICTORY_POINTS_12158: "Dadiangas"
  VICTORY_POINTS_4427: "Cotabato"
