Bunch of Sweden stuff + Denmark-Norway Standardization

--- a/localisation/english/PB_country_specific/PB_Norway_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Norway_l_english.yml
@@ -1,9 +1,15 @@
 ﻿l_english:
 
-  ##########################
-  # MINISTERS
-  ##########################
+  ### LEADERS ###
+  NOR_christian_x: "Christian X"
 
+  ### GENERALS ###
+  NOR_carl_fleischer: "Carl G. Fleischer"
+  NOR_otto_ruge: "Otto Ruge"
+  NOR_kristian_laake: "Kristian Laake"
+  
+  ### ADMIRALS ###
+  NOR_urban_jacob: "Urban Jacob Rasmus Børresen"
 
   ##########################
   # IDEAS
