--- a/localisation/english/PB_country_specific/PB_Sweden_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Sweden_l_english.yml
@@ -12,6 +12,8 @@
   SWE_mannerheim: "Carl Gustaf Mannerheim"
   ### GENERALS ###
   SWE_archibald_douglas: "Archibald Douglas"
+  SWE_axel_gyllenkrok: "Axel Gyllenkrok"
+  SWE_ivar_holmquist: "Ivar Holmquist"
   SWE_ivar_gevert: "Ivar Gevert"
   SWE_ernst_linder: "Ernst Linder"
   SWE_hilding_kring: "Hilding Kring"
@@ -23,6 +25,8 @@
   
   ### ADMIRALS ###
   SWE_charles_champs: "Charles de Champs"
+  SWE_fabian_tamm: "Claës Fabian Tamm"
+
   ### CABINET ###
   # HEAD OF GOVERNMENT
   SWE_trygger: "Ernst Trygger"
