Salafism Subideology, Sweden Colors, Russian Autonomies

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -128,7 +128,7 @@
  RC_VARIANT_09_desc:0 "\n\n£GFX_ideology_conservatism_banner_08\n\n\n\n§Y“Behold, I am the handmaid of the Lord; let it be to me according to your word.”§!\n-§OGospel of Luke§!\n\nFatimism is a Christian theological and political ideology that emerges from belief in the Fatima Event, the series of Marian apparitions reported by three shepherd children in 1917 in Fatima, Portugal. Fatimists view these apparitions as divine revelations that not only reinforce traditional Catholic teachings but also contain prophetic warnings and prescriptions for global politics. Central to Fatimism is the conviction that nations must adhere to the moral and spiritual directives given by the Virgin Mary at Fatima—particularly the call for repentance, prayer (especially the Rosary), and the consecration of Russia to the Immaculate Heart of Mary—to ensure world peace and prevent divine chastisement. This ideology often emphasizes a struggle between Christian civilization and secular or anti-Christian forces, advocating for a political order rooted in Catholic principles.\n\nIn its most radical expressions, Fatimism can take on apocalyptic or millenarian tones, viewing world events through the lens of Fatima’s warnings and anticipating divine intervention in global affairs."
 
  RC_VARIANT_10:0 "§OSalafism§!"
- RC_VARIANT_10_desc:0 "\n\n£GFX_ideology_reactionary_banner_07\n\n\n\n§Y“The first generations of this Ummah are the best. Whoever follows them is guided.”§!\n-§OIbn Taymiyyah§!\n\n§OSalafism§! is a purist movement within Sunni Islam that advocates a return to the practices of the Salaf—the righteous forebears of the early Islamic community. It rejects what it sees as religious innovations, cultural distortions, and the compromises of modernity. Salafists emphasize strict monotheism, literal interpretations of scripture, and the emulation of the Prophet Muhammad’s companions. While often seen as apolitical, some branches espouse political activism or even jihadism to establish a state based on their vision of Sharia. The movement is divided between quietists, reformists, and revolutionaries, all claiming fidelity to the same divine truth.
+ RC_VARIANT_10_desc:0 "\n\n£GFX_ideology_reactionary_banner_07\n\n\n\n§Y“The first generations of this Ummah are the best. Whoever follows them is guided.”§!\n-§OIbn Taymiyyah§!\n\n§OSalafism§! is a purist movement within Sunni Islam that advocates a return to the practices of the Salaf—the righteous forebears of the early Islamic community. It rejects what it sees as religious innovations, cultural distortions, and the compromises of modernity. Salafists emphasize strict monotheism, literal interpretations of scripture, and the emulation of the Prophet Muhammad’s companions. While often seen as apolitical, some branches espouse political activism or even jihadism to establish a state based on their vision of Sharia. The movement is divided between quietists, reformists, and revolutionaries, all claiming fidelity to the same divine truth."
 
  cn:0 "Conservatives"
  cn_noun:0 "Conservatives"
@@ -1638,22 +1638,22 @@
   SAU_ni_party:0 "Ikhwan Fanatics"
   SAU_ni_party_long:0 "Ikhwan Fanatics"
 
-  PHI_jc_party:0 "Sakdalistas"
-  PHI_jc_party_long:0 "Sakdalistas"
-  PHI_ss_party:0 "Magdiwang"
-  PHI_ss_party_long:0 "Magdiwang"
-  PHI_lb_party:0 "Propaganda Movement"
-  PHI_lb_party_long:0 "Propaganda Movement"
+  PHI_jc_party:0 "Magsakdal"
+  PHI_jc_party_long:0 "KKK - Magsakdal Faction"
+  PHI_ss_party:0 "Magdiwang" 
+  PHI_ss_party_long:0 "KKK - Magdiwang" 
+  PHI_lb_party:0 "Visayas Clique" 
+  PHI_lb_party_long:0 "The United Visayan Federal Authority" 
   PHI_cn_party:0 "Magdalo"
-  PHI_cn_party_long:0 "Magdalo"
-  PHI_an_party:0 "Magdalo-Yanco Clique"
-  PHI_an_party_long:0 "Magdalo-Yanco Clique"
+  PHI_cn_party_long:0 "KKK - Magdalo Faction" 
+  PHI_an_party:0 "Yanco United" 
+  PHI_an_party_long:0 "Yanco United Shipping and Voyage" 
   PHI_rc_party:0 "Escuadrón 201"
-  PHI_rc_party_long:0 "Escuadrón 201"
-  PHI_ds_party:0 "Ejército Revolucionario Filipino"
-  PHI_ds_party_long:0 "Ejército Revolucionario Filipino"
-  PHI_ni_party:0 "Makagiting"
-  PHI_ni_party_long:0 "Makagiting"
+  PHI_rc_party_long:0 "201st Mexican Air Squadron" 
+  PHI_ds_party:0 "Japanese Interests" 
+  PHI_ds_party_long:0 "Japanese Military Mission to the Philippines" 
+  PHI_ni_party:0 "Magbantay"
+  PHI_ni_party_long:0 "KKK - Magbantay Faction"
   
   SIA_jc_party:0 "Khana Ratsadon"
   SIA_jc_party_long:0 "Khana Ratsadon"
