portraits and stuff

--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -1778,22 +1778,22 @@
     CAL_cn_ADJ:0 "Californian"
     CAL_an_ADJ:0 "Californian"
 
-    DES_ni:0 "Kingdom of Zion"
-    DES_ni_DEF:0 "The Kingdom of Zion"
-    DES_ds:0 "Kingdom of Zion"
-    DES_ds_DEF:0 "The Kingdom of Zion"
-    DES_rc:0 "Kingdom of Zion"
-    DES_rc_DEF:0 "The Kingdom of Zion"
-    DES_an:0 "Kingdom of Zion"
-    DES_an_DEF:0 "The Kingdom of Zion"
-    DES_cn:0 "Kingdom of Zion"
-    DES_cn_DEF:0 "The Kingdom of Zion"
-    DES_lb:0 "Kingdom of Zion"
-    DES_lb_DEF:0 "The Kingdom of Zion"
-    DES_ss:0 "Kingdom of Zion"
-    DES_ss_DEF:0 "The Kingdom of Zion"
-    DES_jc:0 "Kingdom of Zion"
-    DES_jc_DEF:0 "The Kingdom of Zion"
+    DES_ni:0 "Latter-Day Kingdom of New Zion"
+    DES_ni_DEF:0 "Latter-Day Kingdom of New Zion"
+    DES_ds:0 "Latter-Day Kingdom of New Zion"
+    DES_ds_DEF:0 "Latter-Day Kingdom of New Zion"
+    DES_rc:0 "Latter-Day Kingdom of New Zion"
+    DES_rc_DEF:0 "Latter-Day Kingdom of New Zion"
+    DES_an:0 "Latter-Day Kingdom of New Zion"
+    DES_an_DEF:0 "Latter-Day Kingdom of New Zion"
+    DES_cn:0 "Latter-Day Kingdom of New Zion"
+    DES_cn_DEF:0 "Latter-Day Kingdom of New Zion"
+    DES_lb:0 "Latter-Day Kingdom of New Zion"
+    DES_lb_DEF:0 "Latter-Day Kingdom of New Zion"
+    DES_ss:0 "Latter-Day Kingdom of New Zion"
+    DES_ss_DEF:0 "Latter-Day Kingdom of New Zion"
+    DES_jc:0 "Latter-Day Kingdom of New Zion"
+    DES_jc_DEF:0 "Latter-Day Kingdom of New Zion"
     DES_ni_ADJ:0 "Mormon"
     DES_rc_ADJ:0 "Mormon"
     DES_lb_ADJ:0 "Mormon"
