Big German East Asia Part 2

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -6500,6 +6500,14 @@
   SSL_Overbeck: "Rajahnate of Sulu"
   SSL_Overbeck_DEF: "The Rajahnate of Sabah, Gaya and Sandakan"
   SSL_Overbeck_ADJ: "Suluan"
+ 
+  SSL_Overbeck_German: "Rajahnate of Sulu"
+  SSL_Overbeck_German_DEF: "The Rajahnate of Sabah, Gaya and Sandakan"
+  SSL_Overbeck_German_ADJ: "Suluan"
+  
+  SSL_German: "North Borneo Territory"
+  SSL_German_DEF: "German Territory of the Sulu Archipelago, and Sabah"
+  SSL_German_ADJ: "Suluan"
   
   SSL_Independent: "Sultunate of Sulu"
   SSL_Independent_DEF: "The Sultunate of Sulu"
@@ -6508,6 +6516,10 @@
   PHI_German: "Viceroyalty of the Philippines"
   PHI_German_DEF: "Viceroyalty of the Philippines"
   PHI_German_ADJ: "Filipino"
+  
+  DAS_Papua: "German New Guinea"
+  DAS_Papua_DEF: "German New Guinea"
+  DAS_Papua_ADJ: "Ostasien"
   
   PHI_Mexican: "Aerial Captaincy of the Philippines"
   PHI_Mexican_DEF: "Mexican Aerial Captaincy of the Philippine Islands"
