--- a/localisation/english/PB_country_specific/PB_Philippines_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Philippines_l_english.yml
@@ -15,7 +15,27 @@
   PB_Idea_PHI_FirstBloom:0 "First Asian Bloom"
   PB_Idea_PHI_FirstBloom_desc:0 "The Philippine Republic is one of, if not the first of its kind in the Orient — a shining red beacon in an otherwise feudal continent. Despite the many successes of its northern neighbors, if the Asian race is to truly seek its own destiny, its first flower, before many others, must finally be ready to bloom."
   PB_Idea_PHI_MasonNation:0 "Nation Forged in Fraternity"
-
+  ###########################
+  # DAS IDEAS
+  ###########################
+  PB_Idea_DAS_Bundestag_Patience_1:0 "Bundestag : Out of Mind"
+  PB_Idea_DAS_Bundestag_Patience_2:0 "Bundestag : Out of Sight"
+  PB_Idea_DAS_Bundestag_Patience_3:0 "Bundestag : Out of Hand"
+  PB_Idea_DAS_Bundestag_Patience_4:0 "Bundestag : Outrage"
+  PB_Idea_DAS_Bundestag_Patience_5:0 "Bundestag : Outlast"
+  PB_Idea_DAS_Bundestag_Patience_6:0 "Bundestag : Outright"
+  
+  PB_Idea_DAS_Open_Hand_Policy:0 "Open Hand Policy"
+  PB_Idea_DAS_Nail_Biter_Doctrine:0 "Nail Biter Doctrine"
+  
+  PB_Idea_DAS_Zitronella_Influence_1:0 "Insignificant Zitronella Influence"
+  PB_Idea_DAS_Zitronella_Influence_2:0 "Adequate Zitronella Influence"
+  PB_Idea_DAS_Zitronella_Influence_3:0 "Worrying Zitronella Influence"
+  PB_Idea_DAS_Zitronella_Influence_4:0 "Obscene Zitronella Influence"
+  PB_Idea_DAS_Zitronella_Influence_5:0 "Complete Zitronella Control"
+  
+  GEA_Bund_Rise_tt:0 "§RBundestag Patience Deteriorates§!"
+  
   ##########################
   # FOCUSES
   ##########################
@@ -34,7 +54,7 @@
   PB_SEAWARS_category:0 "The Asian Bloom"
   PB_SEAWARS_category_desc:0 "\n\n\n\n\n\nThe end of the First Great War and the collapse of §RLatin§! colonies in §YVietnam§!, the §BPhilippines§!, and §GMalaya§! in 1910 left a power vacuum, which was swiftly filled by §gGerman§! and §CBritish§! forces in cooperation with homegrown rebellions in the colonies seeking to dislodge the old regimes.\n\nHowever, just as the dust settled and a promising peace seemed within reach, the colonial governments were ordered to continue their missions.\n\nNow, over 20 years since the Great War, a period of protracted and brutal warfare has given rise to a unique opportunity for a new §RJapanese Republic§!—seeking to aid its brothers-in-arms and finally fulfill the broken promises left on the desk at Tours."
   PHI_War_Countdown:0 "The War of Liberation" 
-  PHI_War_Countdown_desc:0 "\n\n£GFX_TT_War_Of_Liberation\n\n\n\nShould German East Asia fail to meet the February deadline, they will be forced to withdraw from the Philippines \n§Runless something *drastic* were to occur.§!" 
+  PHI_War_Countdown_desc:0 "\n\n£GFX_TT_War_Of_Liberation\n\n\n\nThe German Mission to the Philippines has now entered its twenty-second year of operation.\nWhat began as a simple post-Tours peacekeeping mission has since withered into a weary occupation,\nwith an endless rain of bloodshed that has cost the German Government not just face, but fortunes.\nThree administrations have come and gone, each leaving behind more and more liabilities for the next.\nNow, Admiral Dönitz stands at a crossroads, with his rule only being propped up by a difficult and ever crumbling Zitronella bailout.\n\nBut patience in the Bundestag is at a boiling point.\nGrumbling behind closed doors, it has issued an ultimatum: one more year. No more.\nIf Rabaul cannot pacify the islands and silence the rebellion by then,\nthe great Eastern Fleet will weigh anchor and sail—not in triumph, but in quiet retreat.\n§Runless something *drastic* were to occur.§!" 
   PHI_Recover_Old_Mexican_Planes:0 "Recover Old Mexican Planes"
   PHI_Recover_Old_Mexican_Planes_desc:0 "\n\n£GFX_TT_201st_Squadron\n\n\n\nIn the latter years of the Great War, with the influx of Japanese weaponry and guidance, our reliance on the 201st Mexican Air Squadron diminished as the German Navy flooded through the archipelago. Yet if we are to liberate our lands, perhaps we must look to repurpose these relics of the past... and loosen our reliance on Japan."
   PHI_Raid_Zitronella_Labs:0 "Raid Zitronella Labs"
